--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -2,6 +2,9 @@
   /* Main */
   .main_visual .swiper-slide .txt-box {bottom: 15%;}
   .main_visual .swiper-slide .txt-box .inner {width: 55%;}
+
+  /* 브랜드 스토리 > 주요연혁 */
+  .history-box {padding: 90px 90px 0;}
 } /* End */
 
 @media screen and (max-width:1600px) {
@@ -46,6 +49,10 @@
 
   /* 브랜드 스토리 > 인사말 */
   .greeting-mean_box1 {gap: 320px;}
+
+  /* 브랜드 스토리 > 주요연혁 */
+  .history-content::before {left: 70px;}
+  .history-box {padding: 50px 50px 0;}
 } /* End */
 
 @media screen and (max-width:1290px) {
@@ -135,6 +142,15 @@
   /* 브랜드 스토리 > 인사말 */
   .greeting-mean_box1 {gap: 250px;}
   .greeting-mean_paralax {top: 56%; left: 0; font-size: 130px;}
+
+  /* 브랜드 스토리 > 주요연혁 */
+  .history-content::before {top: 25px; left: 40px; border-radius: 100px;}
+  .history-box {padding: 30px 30px 0;}
+  .history-box_row {padding: 20px;}
+  .history-box_year {width: 180px; padding: 0 20px; font-size: 30px;}
+  .history-box_row:first-child .history-box_year::before {top: 15px; width: 10px; height: 10px;}
+  .history-box_text {width: calc(100% - 180px); padding-top: 8px;}
+  .history-box_text p {font-size: 18px;}
 } /* End */
 
 @media screen and (max-width:1023px) {
@@ -271,6 +287,13 @@
   .greeting-mean_word:not(:first-child) {margin-top: 15px;}
   .greeting-mean_paralax {top: 43%; left: 0; margin-left: 0; font-size: 10vw; text-align: center; min-width: auto; width: 100%; transform: none !important;}
 
+  /* 브랜드 스토리 > 주요연혁 */
+  .history-content {margin-top: 70px;}
+  .history-box_year {width: 130px; padding: 0 20px 0 13px; font-size: 22px;}
+  .history-box_row:first-child .history-box_year::before {top: 11px; width: 8px; height: 8px;}
+  .history-box_text {width: calc(100% - 130px); padding-top: 6px;}
+  .history-box_text p {font-size: 16px;}
+
   /* 제품소개 > 상세 */
   .product-v_detail .sizeList .pc-view {display: none;}
   .product-v_detail .sizeList .mo-view {display: block;}
@@ -404,6 +427,11 @@
   .greeting-mean_text2 {margin-top: 10px; font-size: 14px;}
   .greeting-mean_text3 {margin-top: 10px; font-size: 14px;}
   .greeting-mean_paralax {display: none;}
+
+  /* 브랜드 스토리 > 주요연혁 */
+  .history-content::before {display: none;}
+  .history-box {margin-top: 20px; padding: 10px 20px; background-color: #fafafa;}
+  .history-box_row {padding: 10px 0;}
 } /* End */
 
 @media screen and (max-width:480px) {
@@ -476,4 +504,13 @@
   /* 브랜드 스토리 > 고객 리뷰 */
   .review-best-eval {gap: 5px;}
   .review-best-eval p {font-size: 12px;}
+
+  /* 브랜드 스토리 > 주요연혁 */
+  .history-box {margin-top: 10px;}
+  .history-box_year {display: block; width: 100%; font-size: 18px; padding-left: 10px;}
+  .history-box_row:not(:first-child) .history-box_year {padding-left: 0;}
+  .history-box_row:first-child .history-box_year::before {top: 10px; width: 5px; height: 5px;}
+  .history-box_text {display: block; width: 100%;}
+  .history-box_text p {font-size: 14px;}
+  .history-box_text p ~ p {margin-top: 7px;}
 } /* End */
