--- a/src/css/normal.css
+++ b/src/css/normal.css
@@ -388,9 +388,9 @@
 
 /* 제품소개 */
 #product {}
-.product-visual {margin-top: 40px; margin-bottom: 100px; padding: 200px 0 58px;}
-.product-visual.sunglasses {background: url('/src/img/product-bg.jpg') no-repeat center right;}
-.product-visual.lens {background: url('/src/img/product-lens-bg.jpg') no-repeat center right;}
+.product-visual {overflow: hidden; position: relative; margin-top: 40px; margin-bottom: 100px; padding: 200px 0 58px;}
+.product-visual .bg {overflow: hidden; position: absolute; top: 50%; right: 0; z-index: -1; transform: translateY(-50%);}
+.product-visual .bg img {width: 100%; height: 100%; object-fit: cover;}
 .product-visual_title {font-size: 100px; font-weight: 800; color: var(--color-black2); line-height: 1.3;}
 .product-visual_text1 {margin-top: 55px; font-size: 24px; font-weight: 500; color: var(--color-black2); line-height: 1.4;}
 .product-visual_text2 {margin-top: 20px; font-size: 16px; font-weight: 300; color: var(--color-black2); line-height: 1.6;}
@@ -706,4 +706,4 @@
   0% {}
   50% {margin-top: 200px;}
   100% {}
-}v
+}
