--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -58,6 +58,12 @@
   .location-list-li {padding: 50px 0;}
   .location-list-li__l {font-size: 32px;}
   .location-info-li {font-size: 20px;}
+
+  /* 제품소개 */
+  .product-visual {padding: 100px 0 50px;}
+  .product-visual .bg{right: -350px;}
+  .product-visual_title {font-size: 70px;}
+  .product-visual_text1 {font-size: 20px;}
 } /* End */
 
 @media screen and (max-width:1290px) {
@@ -163,6 +169,25 @@
   .location-list-li__l {width: 200px; font-size: 22px;}
   .location-list-li__r {width: calc(100% - 200px);}
   .location-info-li {font-size: 18px;}
+
+  /* 제품소개 */
+  .product-visual {padding: 70px 0 30px;}
+  .product-visual .bg {right: -500px;}
+  .product-visual_title {font-size: 50px;}
+  .product-visual_text1 {font-size: 18px;}
+  .product-visual_scroll {width: 45px; height: 45px;}
+
+  .product-list {gap: 40px 20px;}
+  .product-list_item {width: calc((100% - 40px) / 3);}
+  .product-list_name {font-size: 18px;}
+  .product-list_price {font-size: 15px;}
+  .product-list_option p {font-size: 14px;}
+
+  @keyframes productArrow {
+    0% {top: -45px;}
+    65% {top: -35px;}
+    100% {top: -45px;}
+  }
 } /* End */
 
 @media screen and (max-width:1023px) {
@@ -318,6 +343,37 @@
   .location-map.open {height: 350px;}
   .location-map .root_daum_roughmap .wrap_map {height: 350px;}
 
+  /* 제품소개 */
+  .product-visual {margin-top: 0; margin-bottom: 30px; padding: 0;}
+  .product-visual .bg {position: inherit; top: inherit; right: inherit; transform: none; width: 100%; height: 300px; margin-bottom: 70px;}
+  .product-visual .bg img {position: absolute; top: 50%; left: 50%; z-index: 1; transform: translate(-50%, -50%);}
+  .product-visual_title {font-size: 36px;}
+  .product-visual_text1 {margin-top: 10px;}
+  .product-visual_text1 br {display: none;}
+  .product-visual_text2 {margin-top: 5px;}
+  .product-visual_text2 br {display: none;}
+  .product-visual_scroll {display: none;}
+
+  .product-search_btn p {font-size: 14px;}
+  .product-search_form {border-radius: 10px;}
+  .product-search_body {padding: 0 10px;}
+  .product-search_box {padding: 15px 10px;}
+  .product-search_category {font-size: 16px;}
+  .product-search_list {margin-top: 10px;}
+  .product-search_item ~ .product-search_item {margin-top: 5px;}
+  .product-search_list .check-wrap input[type='checkbox'] + label {padding-left: 22px; font-size: 14px;}
+  .product-search_list .check-wrap input[type='checkbox'] + label::before {top: 2px; width: 16px; height: 16px;}
+  .product-search_list .check-wrap input[type='checkbox']:checked + label::after {left: 3px; top: 6px;}
+  .product-search_list .radio-wrap input[type='radio'] + label {padding-left: 22px; font-size: 14px;}
+  .product-search_list .radio-wrap input[type='radio'] + label::before {top: 3px; width: 16px; height: 16px;}
+  .product-search_list .radio-wrap input[type='radio']:checked + label::after {top: 8px; width: 6px; height: 6px;}
+  .product-search_foot {padding: 10px 20px;}
+  .product-search_foot > * {font-size: 14px;}
+
+  .product-list_name {margin-top: 15px; font-size: 16px;}
+  .product-list_price {margin-top: 5px; font-size: 14px;}
+  .product-list_option {margin-top: 10px;}
+
   /* 제품소개 > 상세 */
   .product-v_detail .sizeList .pc-view {display: none;}
   .product-v_detail .sizeList .mo-view {display: block;}
@@ -470,6 +526,26 @@
   .location-map-btn img {width: 12px;}
   .location-map.open {height: 250px;}
   .location-map .root_daum_roughmap .wrap_map {height: 250px;}
+
+  /* 제품소개 */
+  .product-visual {margin-bottom: 20px;}
+  .product-visual .bg {margin-bottom: 50px;}
+  .product-visual_title {font-size: 22px;}
+  .product-visual_text1 {font-size: 16px;}
+  .product-visual_text2 {font-size: 14px;}
+
+  .product-search {margin-bottom: 10px;}
+  .product-search_btn {padding: 3px 10px;}
+  .product-search_btn i {width: 16px; height: 16px;}
+  .product-search_form {top: calc(100% + 5px);}
+  .product-search_body {display: block; height: 250px; overflow-y: auto;}
+  .product-search_box {width: 100%; border-bottom: 1px solid var(--color-gray7); border-left: 0 !important;}
+  .product-search_foot > * {width: 80px; height: 32px; font-size: 12px;}
+
+  .product-list_item {width: calc((100% - 20px) / 2);}
+  .product-list_name {font-size: 15px;}
+  .product-list_price {font-size: 13px;}
+  .product-list_option p {font-size: 12px;}
 } /* End */
 
 @media screen and (max-width:480px) {
@@ -551,4 +627,8 @@
   .history-box_text {display: block; width: 100%;}
   .history-box_text p {font-size: 14px;}
   .history-box_text p ~ p {margin-top: 7px;}
+
+  /* 제품소개 */
+  .product-list {flex-flow: column wrap; gap: 30px 0;}
+  .product-list_item {width: 100%;}
 } /* End */
